# python-ecg-viewer

./: .gitignore  README.md  pyproject.toml
data/: sample_ecg.csv
docs/superpowers/plans/: 2026-06-22-python-ecg-viewer.md
docs/superpowers/specs/: 2026-06-22-python-ecg-viewer-design.md
ecg_viewer/: __init__.py  __main__.py  data.py  plot.py  window.py
tests/: test_data.py  test_package.py  test_plot.py  test_window.py
